Reorganize parser to a subproject